Add configuration to publish plugin to TeamCity plugin repository

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,11 @@ teamcity {
             downloadUrl = 'https://github.com/etiennestuder/teamcity-build-scan-plugin'
             useSeparateClassloader = true
         }
+
+        publish {
+            token = findProperty('jetbrains.token') // or credentials.JETBRAINS_TOKEN
+            notes = findProperty('change.notes')
+        }
     }
 
     environments {
